--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
           <ul
             class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 border-t-white border-t">
             <li>
-              <a href="#home"
-                class="block py-2 px-3 text-white rounded-sm md:bg-transparent md:p-0 "
+              <a href="#home" class="block py-2 px-3 text-white rounded-sm md:bg-transparent md:p-0 "
                 aria-current="page">Home</a>
             </li>
             <li>
@@ -367,20 +366,23 @@
           </div>
         </a>
       </div>
-      <h1 class="text-3xl font-bold text-center mb-8">Sosial Media</h1>
-      <div class="grid grid-cols-1 md:grid-cols-3">
-        <a href="#" class="w-full" data-aos="fade-right" data-aos-offset="25">
-          <div class="container-telp px-4 mb-4 flex gap-2 items-center justify-center text-base md:text-lg"><img
-              src="assets/icon/instagram.png" alt="Instagram" class="w-6 h-6">@savanadigital</div>
-        </a>
-        <a href="#" class="w-full" data-aos="fade-up" data-aos-offset="25">
-          <div class="container-telp px-4 mb-4 flex gap-2 items-center justify-center text-base md:text-lg"><img
-              src="assets/icon/tik-tok.png" alt="Tiktok" class="w-6 h-6">@savanadigital</div>
-        </a>
-        <a href="#" class="w-full" data-aos="fade-left" data-aos-offset="25">
-          <div class="container-telp px-4 mb-4 flex gap-2 items-center justify-center text-base md:text-lg"><img
-              src="assets/icon/twitter.png" alt="Twitter" class="w-6 h-6">@savanadigital</div>
-        </a>
+
+      <div class="">
+        <h1 class="text-3xl font-bold text-center mb-8">Sosial Media</h1>
+        <div class="flex flex-col md:flex-row">
+          <a href="#" class="w-full" data-aos="fade-up-right" data-aos-offset="25">
+            <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base md:text-lg justify-center"><img
+                src="assets/icon/instagram.png" alt="Instagram" class="w-6 h-6">@savanadigital</div>
+          </a>
+          <a href="#" class="w-full" data-aos="fade-up-right" data-aos-offset="25">
+            <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base md:text-lg justify-center"><img
+                src="assets/icon/tik-tok.png" alt="Tiktok" class="w-6 h-6">@savanadigital</div>
+          </a>
+          <a href="#" class="w-full" data-aos="fade-up-right" data-aos-offset="25">
+            <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base md:text-lg justify-center"><img
+                src="assets/icon/twitter.png" alt="Twitter" class="w-6 h-6">@savanadigital</div>
+          </a>
+        </div>
       </div>
     </div>
 
