--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           Untuk Usaha Anda Agar Customer Anda Tertarik</h2>
         <div class="flex justify-center">
           <a href="#layanan-kami"
-            class="!bg-transparent backdrop-blur-sm border-white border font-medium text-base py-4 px-6 rounded-full flex items-center gap-2 w-max ">Lihat
+            class="!bg-transparent border-white border font-medium text-base py-4 px-6 rounded-full flex items-center gap-2 w-max ">Lihat
             Detail <img src="assets/icon/next.png" alt="Next Icon"
               class="w-5 h-5 invert brightness-0 animate-bounce md-arrow md:p-1"></a>
         </div>
