--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div id="home"
       class="h-screen w-full flex items-center justify-center !bg-[url(./img/background.webp)] text-white bg-no-repeat bg-cover">
       <div class="container-banner text-center">
-        <h1 class="text-2xl font-bold mb-6 px-6 pt-24 md:text-4xl">Desain Cerdas <br> Solusi Digital Berkualitas</h1>
+        <h1 class="text-2xl font-bold mb-6 px-6 md:text-4xl">Desain Cerdas <br> Solusi Digital Berkualitas</h1>
         <h2 class="text-base font-medium mx-12 mb-16 md:text-xl md:mx-16 xl:mx-64 lg:mx-32">Gunakan Jasa Kami Untuk
           Mendapatkan Bermacam Desain
           Yang Keren
