--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
   </nav>
 
-  <div id="home" class="h-screen w-full flex items-center justify-center bg-blue-800 text-white bg-no-repeat bg-cover">
+  <div id="home" class="h-screen w-full flex items-center justify-center bg-[url(/img/background.png)] text-white bg-no-repeat bg-cover bg-center">
     <div class="container-banner text-center">
       <h1 class="text-2xl font-bold mb-6 px-6 md:text-4xl">Desain <span class="text-yellow-400">Cerdas</span> <br>
         Solusi
@@ -264,7 +264,7 @@
             "Pelayanan sangat memuaskan, hasil desain logo sesuai dengan yang diharapkan. Highly recommended!"
           </h1>
         </div>
-        <div class="flex">
+        <div class="flex gap-1">
           <div class="w-10 h-10 bg-gray-300 rounded-full flex items-center justify-center">
             <span class="text-gray-600 text-sm font-bold">U</span>
           </div>
@@ -304,7 +304,7 @@
             "Pelayanan sangat memuaskan, hasil desain logo sesuai dengan yang diharapkan. Highly recommended!"
           </h1>
         </div>
-        <div class="flex">
+        <div class="flex gap-1">
           <div class="w-10 h-10 bg-gray-300 rounded-full flex items-center justify-center">
             <span class="text-gray-600 text-sm font-bold">U</span>
           </div>
@@ -344,7 +344,7 @@
             "Pelayanan sangat memuaskan, hasil desain logo sesuai dengan yang diharapkan. Highly recommended!"
           </h1>
         </div>
-        <div class="flex">
+        <div class="flex gap-1">
           <div class="w-10 h-10 bg-gray-300 rounded-full flex items-center justify-center">
             <span class="text-gray-600 text-sm font-bold">U</span>
           </div>
@@ -411,13 +411,13 @@
         <div
           class="container-telp border-2 border-gray-200 hover:border-blue-400 hover:shadow-lg transition-all rounded-3xl p-4 mb-4 flex gap-2 items-center text-base md:text-lg">
           <svg fill="#FF0000" viewBox="0 0 32 32" class="w-5 h-5" version="1.1" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M16.114-0.011c-6.559 0-12.114 5.587-12.114 12.204 0 6.93 6.439 14.017 10.77 18.998 0.017 0.020 0.717 0.797 1.579 0.797h0.076c0.863 0 1.558-0.777 1.575-0.797 4.064-4.672 10-12.377 10-18.998 0-6.618-4.333-12.204-11.886-12.204zM16.515 29.849c-0.035 0.035-0.086 0.074-0.131 0.107-0.046-0.032-0.096-0.072-0.133-0.107l-0.523-0.602c-4.106-4.71-9.729-11.161-9.729-17.055 0-5.532 4.632-10.205 10.114-10.205 6.829 0 9.886 5.125 9.886 10.205 0 4.474-3.192 10.416-9.485 17.657zM16.035 6.044c-3.313 0-6 2.686-6 6s2.687 6 6 6 6-2.687 6-6-2.686-6-6-6zM16.035 16.044c-2.206 0-4.046-1.838-4.046-4.044s1.794-4 4-4c2.207 0 4 1.794 4 4 0.001 2.206-1.747 4.044-3.954 4.044z"></path> </g></svg>
-          (+62) 812-3456-7890
+          Jl. In Aja Dulu, No 1 Di Hatimu
         </div>
       </a>
     </div>
   </div>
 
-  <div class="p-10 bg-blue-950 text-center flex flex-col items-center">
+  <div class="p-10 bg-blue-900 text-center flex flex-col items-center">
     <h1 class="mb-1 text-lg font-bold text-white md:text-xl flex items-center gap-2"><img src="./img/logo.png" class="w-12">SAVANA DIGITAL STUDIO</h1>
     <h2 class="mb-4 text-base font-semibold text-white md:text-lg">Desain Cerdas <br> Solusi Digital Berkualitas</h2>
     <h1 class="text-sm font-semibold text-white md:text-base">© 2025 Savana Digital Studio. All rights reserved.</h1>
@@ -439,9 +439,9 @@
 
       if (isScrolled || (isMobile && isMenuOpen)) {
         navbar.classList.remove("bg-transparent");
-        navbar.classList.add("bg-blue-950", "backdrop-blur-lg", "bg-opacity-90");
+        navbar.classList.add("bg-blue-900", "backdrop-blur-lg", "bg-opacity-90");
       } else {
-        navbar.classList.remove("bg-blue-950", "backdrop-blur-lg", "bg-opacity-90");
+        navbar.classList.remove("bg-blue-900", "backdrop-blur-lg", "bg-opacity-90");
         navbar.classList.add("bg-transparent");
       }
     }
