coba ganti lagi

--- a/aurum-dining/menu/index.html
+++ b/aurum-dining/menu/index.html
@@ -47,16 +47,16 @@
             <div class="hidden w-full md:flex md:w-auto" id="navbar-menu">
                 <ul
                     class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-700 rounded-lg bg-black/90 md:space-x-10 md:flex-row md:mt-0 md:border-0 md:bg-transparent">
-                    <li><a href="/aurum-dining/"
+                    <li><a href="./aurum-dining/"
                             class="block py-2 px-3 text-white rounded hover:text-[#d4af37] transition">Home</a></li>
-                    <li><a href="/aurum-dining/menu/"
+                    <li><a href="./aurum-dining/menu/"
                             class="block py-2 px-3 rounded text-[#d4af37] transition">Menu</a></li>
-                    <li><a href="/aurum-dining/#about"
+                    <li><a href="./aurum-dining/#about"
                             class="block py-2 px-3 text-white rounded hover:text-[#d4af37] transition">Tentang</a></li>
-                    <li><a href="/aurum-dining/galeri/"
+                    <li><a href="./aurum-dining/galeri/"
                             class="block py-2 px-3 text-white rounded hover:text-[#d4af37] transition">Galeri</a></li>
                     <li>
-                        <a href="/aurum-dining/#reservasi"
+                        <a href="./aurum-dining/#reservasi"
                             class="block py-2 px-4 bg-[#d4af37] text-black font-semibold rounded-full hover:bg-yellow-500 transition">
                             Reservasi
                         </a>
